<resources>
    <string name="app_name">Simple Calculator Application</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="answer">0</string>
    <string name="divide">/</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="percentage">%</string>
    <string name="paranthesis">()</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="sign_change">+/-</string>
    <string name="close_parentheses_button">)</string>
    <string name="open_parentheses_button">(</string>

    <string name="error_unbalanced_parentheses">Error: Unbalanced parentheses</string>
    <string name="error_invalid_expression">Error: Invalid expression</string>
    <string name="error_exception_occurred">Error: Exception occurred</string>
    <string name="error_invalid_number">Error: Invalid number</string>

</resources>