<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onButtonClick"
                android:text="@string/c"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/open_parentheses_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onOpenParenthesesButtonClick"
                android:text="@string/open_parentheses_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/close_parentheses_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onCloseParenthesesButtonClick"
                android:text="@string/close_parentheses_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onButtonClick"
                android:text="@string/plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onButtonClick"
                android:text="@string/minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onButtonClick"
                android:text="@string/multiply"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onButtonClick"
                android:text="@string/divide"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_decimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/decimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@drawable/button_bg_stroke"
                android:onClick="onButtonClick"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_evaluate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorPrimaryDark"
                android:onClick="onButtonClick"
                android:text="@string/equal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_percentage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:background="@color/colorAccent"
                android:onClick="onButtonClick"
                android:text="@string/percentage"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#fff"
                tools:ignore="TextContrastCheck" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/button_backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/backspace"
        android:onClick="onButtonClick"
        android:src="@drawable/ic_backspace_black_24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/current_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:baselineAligned="false"
            android:ellipsize="end"
            android:maxLength="18"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button_backspace"
            app:layout_constraintEnd_toStartOf="@+id/input_operation" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/answer_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:maxLines="1"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/complete_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_result" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>